--- a/QuotesPortlet/src/main/webapp/css/main.css
+++ b/QuotesPortlet/src/main/webapp/css/main.css
@@ -1,3 +1,24 @@
+.portlet-wrapper {
+	margin-bottom: 0.5em;
+	margin-top: 1em;
+}
+
 .quote-text {
 	font-size: 125%;
+	font-style: italic;
+}
+
+.quote-author {
+	font-size: 110%;
+	line-height: 3em;
+}
+
+#add_quote_form {
+	padding: 1em;
+	border: 1px solid gray;
+}
+
+.same_as_checkbox {
+	padding-left: 5px;
+	padding-bottom: 24px;
 }
